Discussion UI fixes. Discussion UI now pretty much done: - Fix href on top level reply (was undefined) by switching to hrefs rather than buttons - Fix vertical cropping of top level replies

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -274,7 +274,7 @@ input {
 	padding:7px 34px 0 25px;
 	text-align:left;
 	font-size:14px;
-	line-height:19px;
+	line-height:29px;
 	overflow:hidden;
 	margin:0 0 0 -23px;
 }
